# Automake source file for the Parma Polyhedra Library.
# Copyright (C) 2001-2010 Roberto Bagnara <bagnara@cs.unipr.it>
# Copyright (C) 2010-2013 BUGSENG srl (http://bugseng.com)
#
# This file is part of the Parma Polyhedra Library (PPL).
#
# The PPL is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by the
# Free Software Foundation; either version 3 of the License, or (at your
# option) any later version.
#
# The PPL is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
# for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software Foundation,
# Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02111-1307, USA.
#
# For the most up-to-date information see the Parma Polyhedra Library
# site: http://bugseng.com/products/ppl/ .

# M4 macro files to be used by the client applications with Autoconf.
m4datadir = $(datadir)/aclocal
m4data_DATA = \
ppl.m4 \
ppl_c.m4

# M4 macro files for internal use.
m4macros = \
ac_check_ciao.m4 \
ac_check_classpath.m4 \
ac_check_fpu_control.m4 \
ac_check_gmp.m4 \
ac_check_sicstus_prolog.m4 \
ac_check_swi_prolog.m4 \
ac_check_xsb_prolog.m4 \
ac_cxx_attribute_weak.m4 \
ac_cxx_double_binary_format.m4 \
ac_cxx_zero_length_arrays.m4 \
ac_cxx_float_binary_format.m4 \
ac_cxx_ieee_inexact_flag.m4 \
ac_cxx_limit_memory.m4 \
ac_cxx_long_double_binary_format.m4 \
ac_cxx_plain_char_is_signed.m4 \
ac_cxx_proper_long_double.m4 \
ac_prog_jar.m4 \
ac_prog_java.m4 \
ac_prog_javac.m4 \
ac_prog_javah.m4 \
ac_text_md5sum.m4 \
libtool.m4 \
ltoptions.m4 \
ltsugar.m4 \
ltversion.m4 \
lt~obsolete.m4

EXTRA_DIST = $(m4macros) $(m4data_DATA)
